# IBD_REIGNS

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  app.py  docker-compose.yml  dump_comp.py  dump_urls.py  dumper.py  list_components.py  list_routes.py  list_urls.py  locustfile.py  nginx.conf  pyproject.toml  st_output.txt  start_docker_cluster.sh  start_local_server.sh  start_public_tunnel.sh  test_app.py  test_app2.py  test_capture.py  test_component.py  test_pw.py  test_registry.py  test_simple.py  test_syntax.js  test_urls.py
.agent/: project_context.json
.streamlit/: config.toml
assets/: endings.json  events.json  game_rules.json  scenarios_expansion.json
data/: analytics.jsonl
design-system/: MASTER.md
docs/: RoadMap.md
ibd_reigns/: __init__.py  analytics.py  analytics_summary.py  constants.py  cta.py  deck.py  engine.py  event_analytics.py  hints.py  models.py  schema.py  sql_engine.py  ui_styles.py
scripts/: cluster_test_results_failures.csv  cluster_test_results_stats.csv  cluster_test_results_stats_history.csv  generate_svg_assets.py  load_test.py  load_test_results_stats.csv  load_test_results_stats_history.csv  load_test_results_ws_stats.csv  load_test_results_ws_stats_history.csv  translate_cards.py
specs/: README.md
tests/: conftest.py  test_analytics.py  test_analytics_summary.py  test_autopsy_cta.py  test_checkup.py  test_consult.py  test_contextual_education.py  test_coverage_extra.py  test_coverage_more.py  test_deck.py  test_dynamic_deck.py  test_e2e.py  test_engine_core.py  test_engine_difficulty.py  test_hints.py  (+17 more)
(+35 files in other folders)
